--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="power">Copyright&nbsp;&copy;&nbsp;2015
                 <script>
                     document.write(' - ' + (new Date()).getFullYear())
-                </script>&nbsp;<a href="https://blog.zwying.com/">小橘子</a>&nbsp;&amp;&nbsp;
+                </script>&nbsp;<a href="https://blog.zwying.com/">小橘子</a>
                 <!-- <a href="https://beian.miit.gov.cn/" target="_blank" rel="nofollow">京ICP备17025554号-2</a> -->
             </div>
         </footer>
