--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <!--第一组-->
                                 <div class="row">
                                     <div class="col">
-                                        <a href="#" target="_blank">
+                                        <a href="https://gudday.club" target="_blank">
                                             <div class="link-card cards">
                                                 <svg stroke="currentColor" fill="currentColor" stroke-width="0"
                                                     viewBox="0 0 1024 1024" height="1em" width="1em"
@@ -136,7 +136,7 @@
                                         </a>
                                     </div>
                                     <div class="col 2">
-                                        <a href="#" target="_blank">
+                                        <a href="https://gudday.club" target="_blank">
                                             <div class="link-card cards">
                                                 <svg stroke="currentColor" fill="currentColor" stroke-width="0"
                                                     viewBox="0 0 1024 1024" height="1em" width="1em"
@@ -150,7 +150,7 @@
                                         </a>
                                     </div>
                                     <div class="col">
-                                        <a href="#" target="_blank">
+                                        <a href="https://gudday.club" target="_blank">
                                             <div class="link-card cards">
                                                 <svg stroke="currentColor" fill="currentColor" stroke-width="0"
                                                     viewBox="0 0 1024 1024" height="1em" width="1em"
